theme/extras/document.less
// @h3MarginTop: 4.375rem;
@h3MarginTop: 3rem;

.h3Spacer() {
  padding-top: @h3MarginTop;
  margin-top: 0rem;
}

// fix editing image blocks
.block-editor-image {
  p.align.left,
  p.align.right,
  div.align.left,
  div.align.right {
    min-height: 2px;
    background-color: red;
    cursor: pointer;
  }
}

// fix alignment of inline image in paragraph
.block.image.align:has(+ p) {
  margin-bottom: 0em;
}

.unsetImg() {
  &.small,
  &.large,
  &.medium {
    max-width: unset !important;
    background-color: green !important;
  }
}

.imageBlock() {
  // & > .block.image.align.right {
  //   .img-wrapper.medium {
  //     max-width: 33%;
  //   }
  // }

  .block.image {
    // .align.center
    margin-right: unset;
    margin-bottom: unset;
    margin-left: unset;
    text-align: left;

    &.align.right {
      .img-wrapper {
        margin-bottom: 1em;
        margin-left: 1em;
        float: right;

        &.medium {
          max-width: 40%;
        }

        &.small {
          max-width: 25%;
        }
      }

      img {
        // .unsetImg();

        max-width: 100%;
        margin-bottom: unset;
        margin-left: unset !important;
        float: unset;
      }
    }

    &.align.left {
      .img-wrapper {
        margin-right: 1em;
        margin-bottom: 1em;
        float: left;

        &.medium {
          max-width: 40%;
        }

        &.small {
          max-width: 25%;
        }
      }

      img {
        .unsetImg();

        max-width: 100%;
        margin-right: unset !important;
        margin-bottom: unset;
        float: unset;

        &.small,
        &.large,
        &.medium {
          max-width: unset !important;
        }
      }
    }

    .img-wrapper {
      &.small {
        // max-width: 50%;
        margin-right: unset;
        margin-left: 30%;
      }

      &.medium {
        width: 70%;
        max-width: 70%;
        margin-right: unset;
        margin-left: 30%;
      }

      &.large {
        max-width: 100%;
        margin-left: 0%;
      }
    }

    .image-caption {
      .fontSizeSecondary();
      display: block;
      margin-bottom: 1em;
    }
  }
}

.ui.segment.content-area {
  margin-top: 4em;
}

.ui.segment.content-area #view {
  min-height: 30em;

  a {
    color: @black;
  }

  p a {
    text-decoration: underline;
  }

  // Volto default blockquote & callout
  blockquote.callout {
    min-height: 3em;
    padding: 0;
    padding-right: 5rem;
    padding-left: 7.5rem;
    border: unset;
    margin-left: @leftColumnSize;
    background: url('@{assetsFolder}/images/quotes.svg') no-repeat top left;
    box-shadow: unset;
    font-size: clamp(1.125rem, 2.75vw, 1.75rem);
    line-height: clamp(1.35rem, 2.75vw, 2.1rem);
  }

  p.callout {
    //border-left: 4px @blueLight solid;
    padding: @h3MarginTop 4rem 0 4rem;
    border: unset;
    border-radius: 0px;
    box-shadow: unset;
    font-family: @fontName;
    font-size: clamp(1.125rem, 2.75vw, 1.75rem);
    font-style: italic;
    line-height: clamp(1.35rem, 2.75vw, 2.1rem);
  }
}

#page-edit,
#page-add {
  // img {
  //   height: 200px !important;
  // }
  // .imageBlock();
  // & > .ui.container .blocks-form .block.image {
  // }
  .block.image {
    img.small {
      max-width: 30%;
    }

    img.medium {
      max-width: 100%;
    }
  }
}

// Floated content design
#page-document {
  .imageBlock();

  // float h3s to left
  & > h3 {
    max-width: @leftColumnSize;
    padding-right: 1em;
    margin-top: 0px;
    float: left;
    font-family: @headerFont;
    font-size: clamp(1.125rem, 2.75vw, 1.563rem);
    line-height: clamp(1.35rem, 2.75vw, 1.875rem);
    text-transform: none;

    &:not(:first-child) {
      .h3Spacer();
    }

    // fix case when the document starts with an h3
    &:first-child + p {
      min-height: 3em;
      padding-top: 0em !important;
    }

    & + *:not(:first-child) {
      .h3Spacer();
      // margin-top: @h3MarginTop;
      // padding-top: @h3MarginTop;
    }

    & + p.block.image.align {
      clear: none;
    }
  }

  & > p,
  & > ol,
  & > ul,
  & > div.block.video {
    margin-left: @leftColumnSize;

    &.full {
      margin-left: unset;
    }
  }

  & .btn-block.primary,
  & .btn-block.secondary {
    // display: unset;
    margin-left: @leftColumnSize;
    line-height: 2em;
  }

  & > table,
  .table-of-contents {
    @media only screen and (min-width: @largestTabletScreen) {
      // width: @rightColumnSize;
      // margin-left: @leftColumnSize;
    }
  }

  & > h3 + .ui.divider {
    margin-top: calc(@h3MarginTop * 1.4);
    margin-bottom: calc(@h3MarginTop * 1);
  }

  & > .ui.divider:not(.vertical):not(.horizontal) {
    border-top: 1px solid black;
    border-bottom: 1px solid hsla(0, 0%, 100%, 0.1);
  }

  & > .ui.divider.short {
    width: @rightColumnSize;
    margin-left: @leftColumnSize;
  }

  & > .ui.hidden.divider {
    clear: both;
  }

  & > h2 {
    margin-top: 1em;
  }

  & > .btn-block {
    display: block;
  }

  & > .btn-block:has(+ p) {
    margin-bottom: 2em;
  }
}

//remove page margins for mobile
@media only screen and (max-width: @largestMobileScreen) {
  #page-document {
    // un-float h3s to left
    & > h3 {
      max-width: 100%;
      float: unset;
    }

    & > p,
    & > ol,
    & > ul,
    & > div.block.video {
      margin-left: unset;

      &.full {
        margin-left: unset;
      }
    }

    & > .ui.divider.short {
      margin-left: unset;
    }

    & > table,
    .table-of-contents {
      width: 100%;
      margin-left: unset;
    }

    .quoteBlock-wrapper {
      margin-left: unset;
    }

    & > h3 + *:not(:first-child) {
      padding-top: unset;
      margin-top: unset;
    }

    & > h3 + .ui.divider {
      margin-top: unset;
      margin-bottom: unset;
      // padding-top: unset;
    }

    blockquote.callout {
      margin-left: unset !important;
    }

    & .btn-block.primary,
    & .btn-block.secondary {
      margin-left: unset;
    }
  }
}

/********   Other typography/styles   ********/
// P2 Body Copy Desktop
.p2 {
  .fontSizeSecondary();
}

// discreet Desktop
.discreetBlock {
  font-size: clamp(0.75rem, 2.25vw, 0.875rem);
  line-height: clamp(0.975rem, 2.25vw, 1.026rem);
}

// Description below h1 title
.content-description {
  font-family: @headerFont;
  font-size: clamp(1.125rem, 2.75vw, 1.75rem);
  line-height: clamp(1.35rem, 2.75vw, 2.1rem);
}

// no borders on h1
.documentFirstHeading {
  border: unset;

  &::before {
    border: unset;
  }
}

// .contenttype-event {
//   #page-document {
//     margin-top: 4em;
//   }
// }

.multiple-content-view {
  .herosection {
    .ui.container {
      display: flex;

      h1 {
        width: 50%;
      }

      p {
        width: 50%;
        margin-top: 60px !important;
      }
    }
  }
}

.view-viewview main #view {
  h1.documentFirstHeading {
    display: none; // it is displayed as part of the HeroSection
  }
}

.view-addview .header-bg,
.view-editview .header-bg {
  display: none;
}

#page-document .block.hero .hero-body {
  padding-top: 0px;
}

